--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.sql.init.mode=always
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 #spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 #spring.datasource.username=${POSTGRES_USER}
